fix: get Artist album count error